# xcommon_cmake

./: .doc_exclude  .gitignore  .gitmodules  CHANGELOG.rst  Jenkinsfile  index.rst  python_version.txt  requirements.in  requirements.txt  settings.yml  xcommon.cmake  xcore_xs.cmake  xmos_utils.cmake
Compiler/: XCC-ASM.cmake
cmake_toolchain/: xcore.cmake
doc/: config_files.rst  dependency_management.rst  exclude_patterns.inc  introduction.rst  quick_start.rst  sandbox.rst
doc/advanced/: dependency_management.rst  index.rst  native_build.rst
doc/api_reference/: dependency_format.rst  functions.rst  index.rst  options.rst  variables.rst
doc/examples/: app_configs.rst  compiler_flags.rst  index.rst  module_dependencies.rst  multi_app_repo.rst  optional_headers.rst  static_library.rst
tests/: conftest.py  requirements-in.txt  requirements.txt  test_cmake.py  test_unit.py  test_version_match.py
tests/_multi_app_build/: CMakeLists.txt  README.txt
tests/_native_build/: README.txt
tests/_static_lib_depend_static_static_wrap/: README.txt  static_lib_depend_static_static_wrap.expect
tests/_unit_form_manifest_string/: CMakeLists.txt
tests/_unit_parse_dep_string/: CMakeLists.txt
tests/_unit_repeated_include_xcommon/: CMakeLists.txt
tests/_unit_repeated_include_xcommon/dir0/: CMakeLists.txt
tests/build_configs/: CmakeLists.txt  build_configs.simlog.expect  build_configs_config2.expect
tests/build_configs_libs/: README.txt  build_configs_libs_config1.expect  build_configs_libs_config2.expect
tests/build_default_config/: CmakeLists.txt  Makefile  (+2 more)
(+574 files in other folders)
